--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://nadtosonna.github.io/team-project-7",
+  "homepage": "https://MaxsaVika.github.io/team-site-7",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /team-project-7/"
+    "build": "parcel build src/*.html --public-url /team-site-7/"
   },
   "repository": {
     "type": "git",
